Reduce Error Message in LoginDisplayHostImpl::ShutdownDisplayHost The NOTIMPLEMENTED for Mus in LoginDisplayHostImpl::ShutdownDisplayHost was too aggressive, and triggering in vm_tests for non-Mus builds. Restricting the NOTIMPLEMENTED to just the Mus scenario

BUG=611580

Review-Url: https://codereview.chromium.org/1980833002
Cr-Commit-Position: refs/heads/master@{#393919}

Former-commit-id: 7c4480dca0af49887343705b1776ee01bb3cab19